Bug, stylesheet fixes.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,82 +6,13 @@
     <title>{{ page.title }}</title>
     <meta name="description" content="Phillip Mendonca-Vieira, aka phillmv, is a computer scientist, a freelance ruby on rails developer, a photographer and an all around nice guy"/>
     <link rel="stylesheet" type="text/css" href="/css/960.css" />
-    <style type="text/css">
-      body {
-	font-family: 'Helvetica','Arial',sans-serif;
-      }
-
-      a:visited
-      {
-	color: #551A8B;	
-      }
-
-      #name {
-	font-size: 50px; 
-	letter-spacing: -2px;
-	position: relative;
-	margin-top: 10px;
-	font-weight: bold;
-      }
-      
-      #name a
-      {
-	text-decoration: none;
-	color: black;
-      }
-      #name a:hover
-      {
-	color: #551A8B;
-	text-decoration: none;
-      }
-
-      #prelude
-      {
-	padding-top: 10px;
-	font-size: 20px;
-      }
-
-      a 
-      {
-	text-decoration: none;
-      }
-      a:hover
-      {
-	text-decoration: underline;
-      }
-      #tagline {
-	font-size: 15px;
-	position: relative;
-
-      }
-
-      #foo {
-	font-size: 20px;
-      }
-
-      #content {
-	font-family: 'Times New Roman';
-	font-weight: normal;
-	font-size: 13pt;
-	margin: auto auto -10px auto;
-/*	padding-left: 60px;*/
-      }
-
-      h1
-      {
-	font-size: 22px;
-	padding-top: 10px;
-	font-family: 'Helvetica','Arial',sans-serif;
-      }
-
-    </style>
-
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />
   </head>
   <body>
     <div class="container_12">
       <div class="grid_8 prefix_2">
 	<div id="name"><a href="http://okayfail.com">Phillip Mendonça-Vieira</a></div>
-	<div id="tagline"><a href="/about.html">about</a>, <a href="/about.html#contact">contact</a> • follow me on <a href="http://twitter.com/phillmv">twitter</a>, <a href="http://believeinanything.com">tumblr</a>, <a href="http://flickr.com/photos/hiffy">flickr</a>, <a href="http://github.com/phillmv">github</a> • <a href="/archive.html">archive</a></div>
+	<div id="tagline"><a href="/about.html">about</a>, <a href="/about.html#contact">contact</a> • <a href="/archive.html">archive</a> • follow me on <a href="http://twitter.com/phillmv">twitter</a>, <a href="http://flickr.com/photos/hiffy">flickr</a>, <a href="http://github.com/phillmv">github</a> or my <a href="http://believeinanything.com">tumblelog</a></div>
       </div>
       <div class="grid_7 prefix_2">
 	<div id="content">
