New blog post, design tweaks, added rss feed.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     <div class="container_12">
       <div class="grid_8 prefix_2">
 	<div id="name"><a href="http://okayfail.com">Phillip Mendonça-Vieira</a></div>
-	<div id="tagline"><a href="/about.html">about</a>, <a href="/about.html#contact">contact</a> • <a href="/archive.html">archive</a> • follow me on <a href="http://twitter.com/phillmv">twitter</a>, <a href="http://flickr.com/photos/hiffy">flickr</a>, <a href="http://github.com/phillmv">github</a> or my <a href="http://believeinanything.com">tumblelog</a></div>
+	<div id="tagline"><a href="/about.html">about</a> • <a href="/archive.html">archive</a> • <a href="http://okayfail.com/atom.xml">rss</a> • follow me on <a href="http://twitter.com/phillmv">twitter</a>, <a href="http://flickr.com/photos/hiffy">flickr</a>, <a href="http://github.com/phillmv">github</a> or my <a href="http://believeinanything.com">tumblr1</a>, <a href="http://killingmyself.tumblr.com">tumblr2</a></div>
       </div>
       <div class="grid_7 prefix_2">
 	<div id="content">
