--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,4 +1,9 @@
 ---
 layout: default
 ---
-{{ content }}
+
+<div class="post">
+  <h1><a href="{{page.url}}">{{ page.title }}</a></h1>
+
+  {{ content }}
+</div>
