--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,37 +1,46 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta charset="utf-8">
     <title>{{ page.title }}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Phillip Mendonca-Vieira, aka phillmv, is a computer scientist, a freelance ruby on rails developer, a photographer and an all around nice guy"/>
-    <link rel="stylesheet" type="text/css" href="/css/boilerplate.css" />
-    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <meta name="author" content="Phillip Mendonça-Vieira">
+
+    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+    <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <link href="/css/bootstrap.css" rel="stylesheet">
+    <link href="/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet" />
   </head>
+
   <body>
-    <div id="header">
+    <header>
       <h1><a href="http://okayfail.com">Phillip Mendonça-Vieira</a></h1>
       <div>
-	Follow me on <a href="http://twitter.com/phillmv">twitter</a>, <a href="http://flickr.com/photos/hiffy">flickr</a>, <a href="http://github.com/phillmv">github</a> or my <a href="http://believeinanything.com">reading blog</a>, <a href="http://killingmyself.tumblr.com">smoking blog</a><br/>
+	Follow me on <a href="http://twitter.com/phillmv">twitter</a>, <a href="http://flickr.com/photos/hiffy">flickr</a>, <a href="http://github.com/phillmv">github</a>, my <a href="http://believeinanything.com">reading blog</a> or my <a href="http://killingmyself.tumblr.com">photo blog</a><br/>
 	<a href="/about.html">about</a> • 
 	<a href="/archive.html">archive</a> • 
 	<a href="http://okayfail.com/atom.xml">rss</a>
       </div>
-    </div>
-    <div id="content">
+    </header>
+    <section id="content">
       {{ content }}
-      <br/></br>
-    </div>
-  </div>
+    </section>
+
+
   <script type="text/javascript">
     var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
     document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
     </script>
     <script type="text/javascript">
       try {
-	var pageTracker = _gat._getTracker("UA-3507107-2");
+	var pageTracker = _gat._getTracker("");//UA-3507107-2");
 	pageTracker._trackPageview();
       } catch(err) {}
-    </script>
+</script>
   </body>
 </html>
