--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,10 @@
 layout: default
 ---
 
-<div class="post">
-  <h1><a href="{{page.url}}">{{ page.title }}</a></h1>
+<section class="post">
+  <h1>
+    <a href="{{page.url}}">{{ page.title }}</a>
+  </h1>
 
   {{ content }}
-</div>
+</section>
