--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
     </script>
     <script type="text/javascript">
       try {
-	var pageTracker = _gat._getTracker("");//UA-3507107-2");
+	var pageTracker = _gat._getTracker("UA-3507107-2");
 	pageTracker._trackPageview();
       } catch(err) {}
 </script>
