Spruced up design, converted old blog posts to fit.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,6 @@ layout: default
   <h1>
     <a href="{{page.url}}">{{ page.title }}</a>
   </h1>
-
   {{ content }}
+  <p><a href="{{page.url}}"># {{ page.date|date:"%d %b, %Y"}}</a></p>
 </section>
