--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -27,7 +27,7 @@
         <div id="bio" class="span6 offset2">
           <h1><a href="/">Phillip Mendonça-Vieira</a></h1>
           <h3 class="tagline">Chief exporter of awesome. Partner at <a href="http://state.io">State.io</a></h3>
-          <h3 class="morelinks"><a href="/about.html">About</a>, <a href="/archive.html">archive</a>. You can also find me on <a href="http://twitter.com/phillmv">twitter</a>, <a href="http://believeinanything.com">tumblr</a> or <a href="http://instagram.com/phillmv">flickr</a></h3>
+          <h3 class="morelinks"><a href="/about.html">About</a>, <a href="/archive.html">archive</a>. You can also find me on <a href="http://twitter.com/phillmv">twitter</a>, <a href="http://instagram.com/phillmv">instagram</a> or <a href="http://www.flickr.com/photos/hiffy/">flickr</a></h3>
         </div>
       </div>
 
