--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{{ page.title }} - phillmv</title>
+    <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Phillip Mendonca-Vieira, aka phillmv, is a computer scientist, a freelance ruby on rails developer, a photographer and an all around nice guy"/>
     <meta name="author" content="Phillip Mendonça-Vieira">
@@ -27,7 +27,7 @@
         <div id="bio" class="span6 offset2">
           <h1><a href="/">Phillip Mendonça-Vieira</a></h1>
           <h3 class="tagline">Chief exporter of awesome. Partner at <a href="http://state.io">State.io</a></h3>
-          <h3 class="morelinks"><a href="/about.html">About</a>, <a href="/archive.html">archive</a>. You can also find me on <a href="http://twitter.com/phillmv">twitter</a>, <a href="http://believeinanything.com">tumblr</a> or <a href="http://instagram.com/phillmv">flickr</a></h3>
+          <h3 class="morelinks"><a href="/about.html">About</a>, <a href="/archive.html">archive</a>. You can also find me on <a href="http://twitter.com/phillmv">twitter</a>, <a href="http://instagram.com/phillmv">instagram</a> or <a href="http://www.flickr.com/photos/hiffy/">flickr</a></h3>
         </div>
       </div>
 
