--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,10 @@ p, h2, h3, pre, hr, blockquote {
   *width: 48.664757228587014%;
 }
 
+#content img {
+  width: 75%;
+}
+
 #content blockquote p {
   width: 100%;
 }
