--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,21 @@
 <div class="row-fluid">
   <div id="bio" class="span6 offset3">
-    <h1><a href="/">go back</a>, projects, photography</h1> 
-    <h3 class="morelinks"><a href="/archive.html">archive</a>. twitter, github, instagram, flickr.</h3>
+    {% if page.url == "/about.html" %}
+      <h1><a href="/">go back</a>, <a href="/projects.html">projects</a>, <a href="/photography.html">photography</a></h1>
+    {% elsif page.url == "/projects.html" %}
+      <h1><a href="/about.html">about</a>, <a href="/">go back</a>, <a href="/photography.html">photography</a></h1> 
+    {% elsif page.url == "/photography.html" %}
+      <h1><a href="/about.html">about</a>, <a href="/projects.html">projects</a>, <a href="/">go back</a></h1> 
+    {% else %}
+      <h1><a href="/about.html">about</a>, <a href="/projects.html">projects</a>, <a href="/photography.html">photography</a></h1> 
+    {% endif %}
+
+    {% if page.url == "/archive.html" %}
+
+      <h3 class="morelinks"><a href="/">go back</a>.  <a href="http://twitter.com/phillmv">twitter</a>, <a href="http://github.com/phillmv">github</a>, <a href="http://instagram.com/phillmv">instagram</a>, <a href="http://flickr.com/photos/hiffy">flickr</a>.</h3>
+    {% else  %}
+      <h3 class="morelinks"><a href="/archive.html">archive</a>. <a href="http://twitter.com/phillmv">twitter</a>, <a href="http://github.com/phillmv">github</a>, <a href="http://instagram.com/phillmv">instagram</a>, <a href="http://flickr.com/photos/hiffy">flickr</a>.</h3>
+    {% endif %}
   </div>
 </div>
 
