--- a/_includes/start.html
+++ b/_includes/start.html
@@ -4,7 +4,7 @@
     <title>{{ page.title }}</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device&#45;width, initial&#45;scale=1.0"> -->
     <meta name="description" content="Phillip Mendonca-Vieira, aka phillmv, is a computer scientist, a freelance ruby on rails developer, a photographer and an all around nice guy"/>
     <meta name="author" content="Phillip Mendonça-Vieira">
     <meta name="author" content="Phillip Mendonca Vieira">
