--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,18 @@
 <div class="row-fluid">
   <div id="bio" class="span6 offset3">
+    <h1><a href="http://okayfail.com">Phillip Mendonça-Vieira</a></h1>
+  </div>
+</div>
+<div class="row-fluid">
+  <div id="bio" class="span6 offset3">
     {% if page.url == "/about.html" %}
-      <h1><a href="/">go back</a>, <a href="/projects.html">projects</a>, <a href="/photography.html">photography</a></h1>
+      <h1><a href="/projects.html">projects</a>, <a href="/photography.html">photography</a></h1>
     {% elsif page.url == "/projects.html" %}
-      <h1><a href="/about.html">about</a>, <a href="/">go back</a>, <a href="/photography.html">photography</a></h1> 
+      <h1><a href="/">go back</a>, <a href="/photography.html">photography</a></h1> 
     {% elsif page.url == "/photography.html" %}
-      <h1><a href="/about.html">about</a>, <a href="/projects.html">projects</a>, <a href="/">go back</a></h1> 
+      <h1><a href="/projects.html">projects</a>, <a href="/">go back</a></h1> 
     {% else %}
-      <h1><a href="/about.html">about</a>, <a href="/projects.html">projects</a>, <a href="/photography.html">photography</a></h1> 
+      <h1><a href="/projects.html">projects</a>, <a href="/photography.html">photography</a></h1> 
     {% endif %}
 
     {% if page.url == "/archive.html" %}
