--- a/_layouts/hello.html
+++ b/_layouts/hello.html
@@ -33,7 +33,7 @@
     <p>I currently run <a href="http://state.io">State Machinery</a>, a security and development consultancy. We've been in business since November, 2012.</p>
     <!-- <p>Do you need a security audit? Do you need help making web apps? We're available <a href="http://state.io">for hire</a>. -->
 
-       <h3 style="font-family: 'Courier New', monospace">xvzf</h3>
+      <h3 style="font-family: 'Courier New', monospace"><a href="http://xvzf.io">xvzf</a></h3>
        <p>Established in 2014, with a few co-conspirators, I organize and throw a regularly occurring storytelling night for Toronto tech workers. We produce a podcast, and a whole bunch of people show up. You should <a href="http://xvzf.io">check it out</a>.</p>
       <h3>Gemcanary</h3>
       <p>
