--- a/_includes/start.html
+++ b/_includes/start.html
@@ -5,12 +5,12 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
     <!-- <meta name="viewport" content="width=device&#45;width, initial&#45;scale=1.0"> -->
-    <meta name="description" content="Phillip Mendonca-Vieira, aka phillmv, is a computer scientist, a freelance ruby on rails developer, a photographer and an all around nice guy"/>
+    <meta name="description" content="Phillip Mendonca-Vieira lives in Toronto, and works as a software engineer."/>
     <meta name="author" content="Phillip Mendonça-Vieira">
     <meta name="author" content="Phillip Mendonca Vieira">
     <meta name="author" content="phillmv">
     <meta name="author" content="Phill MV">
-    <meta name="keywords" content="phillmv rails software awesome Phill Mendonca Vieira Phillip Mendonça-Vieira">
+    <meta name="keywords" content="phillmv rails security toronto software Phill Mendonca Vieira Phillip Mendonça-Vieira">
     <link rel="alternate" type="application/atom+xml" title="rss" href="http://okayfail.com/atom.xml" />
 
 
