--- a/_layouts/hello.html
+++ b/_layouts/hello.html
@@ -5,7 +5,7 @@
     <iframe src="https://vine.co/v/O6AeA3zetbO/embed/simple" width="400" height="400" frameborder="0"></iframe><script src="https://platform.vine.co/static/scripts/embed.js"></script>
   </div>
 </div>
-<div clas="row-fluid">
+<div class="row-fluid">
   <div class="span6 offset3">
     <h1 style="text-align: center">Phillip Mendonça-Vieira</h1>
   </div>
