Tweak intro, projects

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,16 +1,22 @@
 <div class="row-fluid">
   <div id="content" class="span9 offset3">
     <section class="post">
-    <h2>Here is an out of date list of stuff I've worked on:</h2>
+      <h2>Here is an out of date list of stuff I've worked on:</h2>
 
-    <p>I currently run <a href="http://state.io">State Machinery</a>, a security and development consultancy. We've been in business since November, 2012.</p>
-    <!-- <p>Do you need a security audit? Do you need help making web apps? We're available <a href="http://state.io">for hire</a>. -->
+      <a href="https://appcanary.com"><img class="logo" title="Appcanary" src="/img/appcanary.logo.png" /></a>
+      <p>In 2015, we started <a href="https://appcanary.com">Appcanary</a>. We track security vulnerabilities in open source code and notify our customers when they have to take action.</p>
+      <p>We got into Y Combinator, it's been an interesting time. We're doing some cool stuff. Read more about us <a href="blog.appcanary.com">on our blog</a>.</p>
+
 
       <h3 style="font-family: 'Courier New', monospace"><a href="http://xvzf.io">xvzf</a></h3>
-       <p>Established in 2014, with a few co-conspirators, I organize and throw a regularly occurring storytelling night for Toronto tech workers. We produce a podcast, and a whole bunch of people show up. You should <a href="http://xvzf.io">check it out</a>.</p>
+      <p>Established in 2014, with a few co-conspirators, I organize and throw a regularly occurring storytelling night for Toronto tech workers. We produce a podcast, and a whole bunch of people show up. You should <a href="http://xvzf.io">check it out</a>.</p>
+      
+      <img class="logo" src="/img/stateio.logo.png" style="margin-bottom: 0px;" />
+      <p>Until early 2015, I ran <a href="http://state.io">State Machinery</a>, a security and development consultancy. We opened for business in November, 2012. We performed security audits, penetration tests, built mvps and advised teams on how to improve their software practice.</p>
+
       <h3>Gemcanary</h3>
       <p>
-        In February 2013, we built <a href="https://gemcanary.com">Gemcanary</a>, a tool for monitoring known security disclosures in Rails/Bundler enabled applications on Github. I wrote a little bit more about it <a href="http://finite.state.io/blog/2013/03/08/making-gemcanary/">on the State Machinery blog</a>.
+        In February 2013, we built <a href="https://gemcanary.com">Gemcanary</a>, a tool for monitoring known security disclosures in Rails/Bundler enabled applications on Github. I wrote a little bit more about it <a href="http://finite.state.io/blog/2013/03/08/making-gemcanary/">on the State Machinery blog</a>. It eventually led to <a href="https://www.appcanary.com">Appcanary</a>.
       </p>
 
       <iframe width="640" height="360" src="//www.youtube.com/embed/R7pgAlCB3kU?feature=player_embedded" frameborder="0" allowfullscreen></iframe>
